--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,26 +6,38 @@ unbind C-b
 set-option -g prefix C-q
 bind-key C-w send-prefix
 
+unbind r
+bind r source-file ~/.tmux.conf
+
 set -g base-index 1
 setw -g pane-base-index 1
 
 set-option -g status-position top
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
 set -g status-bg colour235
 
 set -g status-left-bg colour235
-set -g status-left "#[fg=colour232,bg=colour245,bold] #S #[fg=colour245,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
+set -g status-left "#[fg=colour240,bg=colour235] Session #S"
 
 set -g status-right-bg colour235
-set -g status-right '#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235]#{battery_icon} #{battery_percentage} #{battery_remain} #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] Online: #{online_status} #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] %h %a-%d %H:%M '
+set -g status-right "#[fg=colour240,bg=colour235] %h %a-%d %H:%M #{online_status} #(battery -p -t)"
 
 set -g window-status-separator ''
 # TMUX Plugins
-set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g default-terminal 'xterm-256color'
 set -ga terminal-overrides ',*:Tc'
+
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
+bind r source-file ~/.tmux.conf
