make Ctrl-Space as prefix in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,8 @@ set -sg escape-time 0
 set -g history-limit 999999
 
 unbind C-b
-set-option -g prefix C-q
-bind-key C-w send-prefix
+set-option -g prefix C-Space
+bind-key Space send-prefix
 
 unbind r
 bind r source-file ~/.tmux.conf
