[Tmux] Add config color for pane border

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,11 @@ bind r source-file ~/.tmux.conf
 set -g base-index 1
 setw -g pane-base-index 1
 
+#Change color pane border
+set -g pane-border-style fg=magenta
+set -g pane-active-border-style fg=magenta
+set -g pane-active-border-style bg=default
+
 set-option -g status-position top
 set -g status-bg colour235
 
@@ -41,3 +46,4 @@ set -g default-shell $SHELL
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 bind r source-file ~/.tmux.conf
+
