--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,5 +45,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pb
 set -g default-shell $SHELL
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
+# Secondary binding for C-l to retain redraw
+bind C-l send-keys 'C-l'
+
 bind r source-file ~/.tmux.conf
 
